parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DP
    MOD
    POW
    COMILLA

Grammar

Rule 0     S' -> startoo
Rule 1     startoo -> STARTOO ID PUNTOYCOMA programa_1 MAIN bloque
Rule 2     programa_1 -> VAR vars FUNC funcs
Rule 3     funcs -> func_1 ID puntoNfx PARIZQ func_2 PARDER LLAVEIZQ VAR vars func_3 LLAVEDER puntoNcont funcs
Rule 4     funcs -> vacio
Rule 5     puntoNfx -> vacio
Rule 6     puntoNfx1 -> vacio
Rule 7     puntoNcont -> vacio
Rule 8     func_1 -> tipo
Rule 9     func_1 -> VOO
Rule 10    func_2 -> tipo ID puntoNfx1 func_21
Rule 11    func_2 -> vacio
Rule 12    func_21 -> COMA tipo ID puntoNfx1 func_21
Rule 13    func_21 -> vacio
Rule 14    func_3 -> bloque_1
Rule 15    func_3 -> vacio
Rule 16    vars -> var_1
Rule 17    vars -> vacio
Rule 18    var_1 -> tipo ID puntoN2 PUNTOYCOMA var_1
Rule 19    var_1 -> vacio
Rule 20    puntoN2 -> vacio
Rule 21    constbool -> TRUEOO
Rule 22    constbool -> FALSEOO
Rule 23    tipo -> INTOO
Rule 24    tipo -> DECOO
Rule 25    tipo -> WORDOO
Rule 26    tipo -> CHAROO
Rule 27    tipo -> BOOL
Rule 28    bloque -> LLAVEIZQ bloque_1 LLAVEDER
Rule 29    bloque_1 -> estatuto bloque_1
Rule 30    bloque_1 -> vacio
Rule 31    estatuto -> llamada PUNTOYCOMA
Rule 32    estatuto -> ciclo
Rule 33    estatuto -> asignacion
Rule 34    estatuto -> condicion
Rule 35    estatuto -> writoo
Rule 36    estatuto -> sort
Rule 37    estatuto -> read
Rule 38    estatuto -> save
Rule 39    estatuto -> get
Rule 40    estatuto -> retorno
Rule 41    asignacion -> var_id_validation IGUAL asignacion_1 PUNTOYCOMA
Rule 42    asignacion_1 -> expresion
Rule 43    asignacion_1 -> arreglo
Rule 44    expresion -> conjunciones
Rule 45    conjunciones -> expresioneslogicas puntoN9 conj_1
Rule 46    puntoN9 -> vacio
Rule 47    conj_1 -> AND puntoN3 conjunciones
Rule 48    conj_1 -> OR puntoN3 conjunciones
Rule 49    conj_1 -> vacio
Rule 50    expresioneslogicas -> exp expresion_1
Rule 51    puntoN8 -> vacio
Rule 52    expresion_1 -> MAYORQUE puntoN3 exp puntoN8
Rule 53    expresion_1 -> MENORQUE puntoN3 exp puntoN8
Rule 54    expresion_1 -> DIFERENTE puntoN3 exp puntoN8
Rule 55    expresion_1 -> MENORIGUAL puntoN3 exp puntoN8
Rule 56    expresion_1 -> MAYORIGUAL puntoN3 exp puntoN8
Rule 57    expresion_1 -> IGUALIGUAL puntoN3 exp puntoN8
Rule 58    expresion_1 -> vacio
Rule 59    writoo -> WRITEOO PARIZQ writoo_1 PARDER PUNTOYCOMA
Rule 60    writoo_1 -> expresion
Rule 61    exp -> termino puntoN4 exp_1
Rule 62    puntoN4 -> vacio
Rule 63    exp_1 -> SUMA puntoN3 exp
Rule 64    exp_1 -> RESTA puntoN3 exp
Rule 65    exp_1 -> vacio
Rule 66    puntoN3 -> vacio
Rule 67    condicion -> IF PARIZQ expresion PARDER DOTHIS bloque condicion_1 PUNTOYCOMA
Rule 68    condicion_1 -> ORTHIS bloque
Rule 69    condicion_1 -> vacio
Rule 70    termino -> factor puntoN5 termino_1
Rule 71    puntoN5 -> vacio
Rule 72    termino_1 -> MULT puntoN3 termino
Rule 73    termino_1 -> DIV puntoN3 termino
Rule 74    termino_1 -> vacio
Rule 75    factor -> factor_1
Rule 76    factor_1 -> PARIZQ puntoN6 expresion PARDER puntoN7
Rule 77    factor_1 -> varcte
Rule 78    puntoN6 -> vacio
Rule 79    puntoN7 -> vacio
Rule 80    factor_2 -> SUMA
Rule 81    factor_2 -> RESTA
Rule 82    factor_2 -> vacio
Rule 83    varcte -> var_id_validation
Rule 84    varcte -> llamada
Rule 85    varcte -> CTEINTOO
Rule 86    varcte -> CTEDECOO
Rule 87    varcte -> CTEWORDOO
Rule 88    varcte -> CHAROO
Rule 89    var_id_validation -> ID
Rule 90    ciclo -> LOOP PARIZQ asignacion expresion PUNTOYCOMA incremento PUNTOYCOMA PARDER bloque
Rule 91    incremento -> var_id_validation INCMAS exp
Rule 92    incremento -> var_id_validation INCMENOS exp
Rule 93    llamada -> ID PARIZQ llamada_1 PARDER
Rule 94    llamada_1 -> expresion llamada_2
Rule 95    llamada_1 -> arreglo llamada_2
Rule 96    llamada_2 -> COMA llamada_1
Rule 97    llamada_2 -> vacio
Rule 98    retorno -> RETURNOO retorno_1 PUNTOYCOMA
Rule 99    retorno_1 -> varcte
Rule 100   retorno_1 -> expresion
Rule 101   arreglo -> ARROO tipo CORCHIZQ INTOO CORCHDER
Rule 102   vacio -> <empty>
Rule 103   sort -> SORTOO PARIZQ ID PARDER PUNTOYCOMA
Rule 104   read -> READOO PARIZQ var_id_validation PARDER PUNTOYCOMA
Rule 105   save -> SAVOO PARIZQ expresion COMA save_3 PARDER PUNTOYCOMA
Rule 106   save_3 -> var_id_validation
Rule 107   save_3 -> CTEWORDOO
Rule 108   get -> GETOO PARIZQ get_2 COMA var_id_validation PARDER PUNTOYCOMA
Rule 109   get_2 -> var_id_validation
Rule 110   get_2 -> CTEWORDOO

Terminals, with rules where they appear

AND                  : 47
ARROO                : 101
BOOL                 : 27
CHAROO               : 26 88
COMA                 : 12 96 105 108
COMILLA              : 
CORCHDER             : 101
CORCHIZQ             : 101
CTEDECOO             : 86
CTEINTOO             : 85
CTEWORDOO            : 87 107 110
DECOO                : 24
DIFERENTE            : 54
DIV                  : 73
DOTHIS               : 67
DP                   : 
FALSEOO              : 22
FUNC                 : 2
GETOO                : 108
ID                   : 1 3 10 12 18 89 93 103
IF                   : 67
IGUAL                : 41
IGUALIGUAL           : 57
INCMAS               : 91
INCMENOS             : 92
INTOO                : 23 101
LLAVEDER             : 3 28
LLAVEIZQ             : 3 28
LOOP                 : 90
MAIN                 : 1
MAYORIGUAL           : 56
MAYORQUE             : 52
MENORIGUAL           : 55
MENORQUE             : 53
MOD                  : 
MULT                 : 72
OR                   : 48
ORTHIS               : 68
PARDER               : 3 59 67 76 90 93 103 104 105 108
PARIZQ               : 3 59 67 76 90 93 103 104 105 108
POW                  : 
PUNTOYCOMA           : 1 18 31 41 59 67 90 90 98 103 104 105 108
READOO               : 104
RESTA                : 64 81
RETURNOO             : 98
SAVOO                : 105
SORTOO               : 103
STARTOO              : 1
SUMA                 : 63 80
TRUEOO               : 21
VAR                  : 2 3
VOO                  : 9
WORDOO               : 25
WRITEOO              : 59
error                : 

Nonterminals, with rules where they appear

arreglo              : 43 95
asignacion           : 33 90
asignacion_1         : 41
bloque               : 1 67 68 90
bloque_1             : 14 28 29
ciclo                : 32
condicion            : 34
condicion_1          : 67
conj_1               : 45
conjunciones         : 44 47 48
constbool            : 
estatuto             : 29
exp                  : 50 52 53 54 55 56 57 63 64 91 92
exp_1                : 61
expresion            : 42 60 67 76 90 94 100 105
expresion_1          : 50
expresioneslogicas   : 45
factor               : 70
factor_1             : 75
factor_2             : 
func_1               : 3
func_2               : 3
func_21              : 10 12
func_3               : 3
funcs                : 2 3
get                  : 39
get_2                : 108
incremento           : 90
llamada              : 31 84
llamada_1            : 93 96
llamada_2            : 94 95
programa_1           : 1
puntoN2              : 18
puntoN3              : 47 48 52 53 54 55 56 57 63 64 72 73
puntoN4              : 61
puntoN5              : 70
puntoN6              : 76
puntoN7              : 76
puntoN8              : 52 53 54 55 56 57
puntoN9              : 45
puntoNcont           : 3
puntoNfx             : 3
puntoNfx1            : 10 12
read                 : 37
retorno              : 40
retorno_1            : 98
save                 : 38
save_3               : 105
sort                 : 36
startoo              : 0
termino              : 61 72 73
termino_1            : 70
tipo                 : 8 10 12 18 101
vacio                : 4 5 6 7 11 13 15 17 19 20 30 46 49 51 58 62 65 66 69 71 74 78 79 82 97
var_1                : 16 18
var_id_validation    : 41 83 91 92 104 106 108 109
varcte               : 77 99
vars                 : 2 3
writoo               : 35
writoo_1             : 59

Parsing method: LALR

state 0

    (0) S' -> . startoo
    (1) startoo -> . STARTOO ID PUNTOYCOMA programa_1 MAIN bloque

    STARTOO         shift and go to state 1

    startoo                        shift and go to state 2

state 1

    (1) startoo -> STARTOO . ID PUNTOYCOMA programa_1 MAIN bloque

    ID              shift and go to state 3


state 2

    (0) S' -> startoo .



state 3

    (1) startoo -> STARTOO ID . PUNTOYCOMA programa_1 MAIN bloque

    PUNTOYCOMA      shift and go to state 4


state 4

    (1) startoo -> STARTOO ID PUNTOYCOMA . programa_1 MAIN bloque
    (2) programa_1 -> . VAR vars FUNC funcs

    VAR             shift and go to state 6

    programa_1                     shift and go to state 5

state 5

    (1) startoo -> STARTOO ID PUNTOYCOMA programa_1 . MAIN bloque

    MAIN            shift and go to state 7


state 6

    (2) programa_1 -> VAR . vars FUNC funcs
    (16) vars -> . var_1
    (17) vars -> . vacio
    (18) var_1 -> . tipo ID puntoN2 PUNTOYCOMA var_1
    (19) var_1 -> . vacio
    (102) vacio -> .
    (23) tipo -> . INTOO
    (24) tipo -> . DECOO
    (25) tipo -> . WORDOO
    (26) tipo -> . CHAROO
    (27) tipo -> . BOOL

    FUNC            reduce using rule 102 (vacio -> .)
    INTOO           shift and go to state 8
    DECOO           shift and go to state 15
    WORDOO          shift and go to state 9
    CHAROO          shift and go to state 13
    BOOL            shift and go to state 14

    tipo                           shift and go to state 10
    vars                           shift and go to state 11
    vacio                          shift and go to state 12
    var_1                          shift and go to state 16

state 7

    (1) startoo -> STARTOO ID PUNTOYCOMA programa_1 MAIN . bloque
    (28) bloque -> . LLAVEIZQ bloque_1 LLAVEDER

    LLAVEIZQ        shift and go to state 17

    bloque                         shift and go to state 18

state 8

    (23) tipo -> INTOO .

    ID              reduce using rule 23 (tipo -> INTOO .)
    CORCHIZQ        reduce using rule 23 (tipo -> INTOO .)


state 9

    (25) tipo -> WORDOO .

    ID              reduce using rule 25 (tipo -> WORDOO .)
    CORCHIZQ        reduce using rule 25 (tipo -> WORDOO .)


state 10

    (18) var_1 -> tipo . ID puntoN2 PUNTOYCOMA var_1

    ID              shift and go to state 19


state 11

    (2) programa_1 -> VAR vars . FUNC funcs

    FUNC            shift and go to state 20


state 12

    (17) vars -> vacio .
    (19) var_1 -> vacio .

  ! reduce/reduce conflict for FUNC resolved using rule 17 (vars -> vacio .)
  ! reduce/reduce conflict for ID resolved using rule 17 (vars -> vacio .)
  ! reduce/reduce conflict for LOOP resolved using rule 17 (vars -> vacio .)
  ! reduce/reduce conflict for IF resolved using rule 17 (vars -> vacio .)
  ! reduce/reduce conflict for WRITEOO resolved using rule 17 (vars -> vacio .)
  ! reduce/reduce conflict for SORTOO resolved using rule 17 (vars -> vacio .)
  ! reduce/reduce conflict for READOO resolved using rule 17 (vars -> vacio .)
  ! reduce/reduce conflict for SAVOO resolved using rule 17 (vars -> vacio .)
  ! reduce/reduce conflict for GETOO resolved using rule 17 (vars -> vacio .)
  ! reduce/reduce conflict for RETURNOO resolved using rule 17 (vars -> vacio .)
  ! reduce/reduce conflict for LLAVEDER resolved using rule 17 (vars -> vacio .)
    ID              reduce using rule 17 (vars -> vacio .)
    LOOP            reduce using rule 17 (vars -> vacio .)
    IF              reduce using rule 17 (vars -> vacio .)
    WRITEOO         reduce using rule 17 (vars -> vacio .)
    SORTOO          reduce using rule 17 (vars -> vacio .)
    READOO          reduce using rule 17 (vars -> vacio .)
    SAVOO           reduce using rule 17 (vars -> vacio .)
    GETOO           reduce using rule 17 (vars -> vacio .)
    RETURNOO        reduce using rule 17 (vars -> vacio .)
    LLAVEDER        reduce using rule 17 (vars -> vacio .)
    FUNC            reduce using rule 17 (vars -> vacio .)

  ! FUNC            [ reduce using rule 19 (var_1 -> vacio .) ]
  ! ID              [ reduce using rule 19 (var_1 -> vacio .) ]
  ! LOOP            [ reduce using rule 19 (var_1 -> vacio .) ]
  ! IF              [ reduce using rule 19 (var_1 -> vacio .) ]
  ! WRITEOO         [ reduce using rule 19 (var_1 -> vacio .) ]
  ! SORTOO          [ reduce using rule 19 (var_1 -> vacio .) ]
  ! READOO          [ reduce using rule 19 (var_1 -> vacio .) ]
  ! SAVOO           [ reduce using rule 19 (var_1 -> vacio .) ]
  ! GETOO           [ reduce using rule 19 (var_1 -> vacio .) ]
  ! RETURNOO        [ reduce using rule 19 (var_1 -> vacio .) ]
  ! LLAVEDER        [ reduce using rule 19 (var_1 -> vacio .) ]


state 13

    (26) tipo -> CHAROO .

    ID              reduce using rule 26 (tipo -> CHAROO .)
    CORCHIZQ        reduce using rule 26 (tipo -> CHAROO .)


state 14

    (27) tipo -> BOOL .

    ID              reduce using rule 27 (tipo -> BOOL .)
    CORCHIZQ        reduce using rule 27 (tipo -> BOOL .)


state 15

    (24) tipo -> DECOO .

    ID              reduce using rule 24 (tipo -> DECOO .)
    CORCHIZQ        reduce using rule 24 (tipo -> DECOO .)


state 16

    (16) vars -> var_1 .

    ID              reduce using rule 16 (vars -> var_1 .)
    LOOP            reduce using rule 16 (vars -> var_1 .)
    IF              reduce using rule 16 (vars -> var_1 .)
    WRITEOO         reduce using rule 16 (vars -> var_1 .)
    SORTOO          reduce using rule 16 (vars -> var_1 .)
    READOO          reduce using rule 16 (vars -> var_1 .)
    SAVOO           reduce using rule 16 (vars -> var_1 .)
    GETOO           reduce using rule 16 (vars -> var_1 .)
    RETURNOO        reduce using rule 16 (vars -> var_1 .)
    LLAVEDER        reduce using rule 16 (vars -> var_1 .)
    FUNC            reduce using rule 16 (vars -> var_1 .)


state 17

    (28) bloque -> LLAVEIZQ . bloque_1 LLAVEDER
    (29) bloque_1 -> . estatuto bloque_1
    (30) bloque_1 -> . vacio
    (31) estatuto -> . llamada PUNTOYCOMA
    (32) estatuto -> . ciclo
    (33) estatuto -> . asignacion
    (34) estatuto -> . condicion
    (35) estatuto -> . writoo
    (36) estatuto -> . sort
    (37) estatuto -> . read
    (38) estatuto -> . save
    (39) estatuto -> . get
    (40) estatuto -> . retorno
    (102) vacio -> .
    (93) llamada -> . ID PARIZQ llamada_1 PARDER
    (90) ciclo -> . LOOP PARIZQ asignacion expresion PUNTOYCOMA incremento PUNTOYCOMA PARDER bloque
    (41) asignacion -> . var_id_validation IGUAL asignacion_1 PUNTOYCOMA
    (67) condicion -> . IF PARIZQ expresion PARDER DOTHIS bloque condicion_1 PUNTOYCOMA
    (59) writoo -> . WRITEOO PARIZQ writoo_1 PARDER PUNTOYCOMA
    (103) sort -> . SORTOO PARIZQ ID PARDER PUNTOYCOMA
    (104) read -> . READOO PARIZQ var_id_validation PARDER PUNTOYCOMA
    (105) save -> . SAVOO PARIZQ expresion COMA save_3 PARDER PUNTOYCOMA
    (108) get -> . GETOO PARIZQ get_2 COMA var_id_validation PARDER PUNTOYCOMA
    (98) retorno -> . RETURNOO retorno_1 PUNTOYCOMA
    (89) var_id_validation -> . ID

    LLAVEDER        reduce using rule 102 (vacio -> .)
    ID              shift and go to state 37
    LOOP            shift and go to state 42
    IF              shift and go to state 38
    WRITEOO         shift and go to state 23
    SORTOO          shift and go to state 21
    READOO          shift and go to state 24
    SAVOO           shift and go to state 43
    GETOO           shift and go to state 39
    RETURNOO        shift and go to state 36

    writoo                         shift and go to state 22
    ciclo                          shift and go to state 25
    var_id_validation              shift and go to state 26
    estatuto                       shift and go to state 27
    llamada                        shift and go to state 28
    condicion                      shift and go to state 29
    retorno                        shift and go to state 30
    save                           shift and go to state 31
    sort                           shift and go to state 32
    get                            shift and go to state 33
    read                           shift and go to state 34
    bloque_1                       shift and go to state 35
    asignacion                     shift and go to state 40
    vacio                          shift and go to state 41

state 18

    (1) startoo -> STARTOO ID PUNTOYCOMA programa_1 MAIN bloque .

    $end            reduce using rule 1 (startoo -> STARTOO ID PUNTOYCOMA programa_1 MAIN bloque .)


state 19

    (18) var_1 -> tipo ID . puntoN2 PUNTOYCOMA var_1
    (20) puntoN2 -> . vacio
    (102) vacio -> .

    PUNTOYCOMA      reduce using rule 102 (vacio -> .)

    puntoN2                        shift and go to state 44
    vacio                          shift and go to state 45

state 20

    (2) programa_1 -> VAR vars FUNC . funcs
    (3) funcs -> . func_1 ID puntoNfx PARIZQ func_2 PARDER LLAVEIZQ VAR vars func_3 LLAVEDER puntoNcont funcs
    (4) funcs -> . vacio
    (8) func_1 -> . tipo
    (9) func_1 -> . VOO
    (102) vacio -> .
    (23) tipo -> . INTOO
    (24) tipo -> . DECOO
    (25) tipo -> . WORDOO
    (26) tipo -> . CHAROO
    (27) tipo -> . BOOL

    VOO             shift and go to state 49
    MAIN            reduce using rule 102 (vacio -> .)
    INTOO           shift and go to state 8
    DECOO           shift and go to state 15
    WORDOO          shift and go to state 9
    CHAROO          shift and go to state 13
    BOOL            shift and go to state 14

    funcs                          shift and go to state 46
    tipo                           shift and go to state 47
    func_1                         shift and go to state 48
    vacio                          shift and go to state 50

state 21

    (103) sort -> SORTOO . PARIZQ ID PARDER PUNTOYCOMA

    PARIZQ          shift and go to state 51


state 22

    (35) estatuto -> writoo .

    ID              reduce using rule 35 (estatuto -> writoo .)
    LOOP            reduce using rule 35 (estatuto -> writoo .)
    IF              reduce using rule 35 (estatuto -> writoo .)
    WRITEOO         reduce using rule 35 (estatuto -> writoo .)
    SORTOO          reduce using rule 35 (estatuto -> writoo .)
    READOO          reduce using rule 35 (estatuto -> writoo .)
    SAVOO           reduce using rule 35 (estatuto -> writoo .)
    GETOO           reduce using rule 35 (estatuto -> writoo .)
    RETURNOO        reduce using rule 35 (estatuto -> writoo .)
    LLAVEDER        reduce using rule 35 (estatuto -> writoo .)


state 23

    (59) writoo -> WRITEOO . PARIZQ writoo_1 PARDER PUNTOYCOMA

    PARIZQ          shift and go to state 52


state 24

    (104) read -> READOO . PARIZQ var_id_validation PARDER PUNTOYCOMA

    PARIZQ          shift and go to state 53


state 25

    (32) estatuto -> ciclo .

    ID              reduce using rule 32 (estatuto -> ciclo .)
    LOOP            reduce using rule 32 (estatuto -> ciclo .)
    IF              reduce using rule 32 (estatuto -> ciclo .)
    WRITEOO         reduce using rule 32 (estatuto -> ciclo .)
    SORTOO          reduce using rule 32 (estatuto -> ciclo .)
    READOO          reduce using rule 32 (estatuto -> ciclo .)
    SAVOO           reduce using rule 32 (estatuto -> ciclo .)
    GETOO           reduce using rule 32 (estatuto -> ciclo .)
    RETURNOO        reduce using rule 32 (estatuto -> ciclo .)
    LLAVEDER        reduce using rule 32 (estatuto -> ciclo .)


state 26

    (41) asignacion -> var_id_validation . IGUAL asignacion_1 PUNTOYCOMA

    IGUAL           shift and go to state 54


state 27

    (29) bloque_1 -> estatuto . bloque_1
    (29) bloque_1 -> . estatuto bloque_1
    (30) bloque_1 -> . vacio
    (31) estatuto -> . llamada PUNTOYCOMA
    (32) estatuto -> . ciclo
    (33) estatuto -> . asignacion
    (34) estatuto -> . condicion
    (35) estatuto -> . writoo
    (36) estatuto -> . sort
    (37) estatuto -> . read
    (38) estatuto -> . save
    (39) estatuto -> . get
    (40) estatuto -> . retorno
    (102) vacio -> .
    (93) llamada -> . ID PARIZQ llamada_1 PARDER
    (90) ciclo -> . LOOP PARIZQ asignacion expresion PUNTOYCOMA incremento PUNTOYCOMA PARDER bloque
    (41) asignacion -> . var_id_validation IGUAL asignacion_1 PUNTOYCOMA
    (67) condicion -> . IF PARIZQ expresion PARDER DOTHIS bloque condicion_1 PUNTOYCOMA
    (59) writoo -> . WRITEOO PARIZQ writoo_1 PARDER PUNTOYCOMA
    (103) sort -> . SORTOO PARIZQ ID PARDER PUNTOYCOMA
    (104) read -> . READOO PARIZQ var_id_validation PARDER PUNTOYCOMA
    (105) save -> . SAVOO PARIZQ expresion COMA save_3 PARDER PUNTOYCOMA
    (108) get -> . GETOO PARIZQ get_2 COMA var_id_validation PARDER PUNTOYCOMA
    (98) retorno -> . RETURNOO retorno_1 PUNTOYCOMA
    (89) var_id_validation -> . ID

    LLAVEDER        reduce using rule 102 (vacio -> .)
    ID              shift and go to state 37
    LOOP            shift and go to state 42
    IF              shift and go to state 38
    WRITEOO         shift and go to state 23
    SORTOO          shift and go to state 21
    READOO          shift and go to state 24
    SAVOO           shift and go to state 43
    GETOO           shift and go to state 39
    RETURNOO        shift and go to state 36
